--- a/profile_A.html
+++ b/profile_A.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p><href="profile_A.html">小坂さんのプロフィール</href></p>
-    <p><href="profile_B.html">森さんのプロフィール</href></p>
+    <p>学科：総合システム工学科1年</p>
+    <p>名前：小坂　崚太</p>
+    <p>苦手教科：数学</p>
+
 </body>
 </html>
